force-app/main/default/objects/Product2_PIM_Mapping__c/Product2_PIM_Mapping__c.object-meta.xml
<CustomObject>
    <label>Product2 PIM Mapping</label>
    <nameField>
        <displayFormat>PIM Mapping - {0000}</displayFormat>
        <label>Product2 PIM Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product2 PIM Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>