force-app/main/default/objects/Product2_PIM_Mapping__c/fields/Base_Code__c.field-meta.xml
<CustomField>
    <fullName>Base_Code__c</fullName>
    <label>Base Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>