force-app/main/default/objects/Product2_PIM_Mapping__c/fields/Base_Description__c.field-meta.xml
<CustomField>
    <fullName>Base_Description__c</fullName>
    <label>Base Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>