force-app/main/default/objects/Product2_PIM_Mapping__c/fields/Brand_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Brand_Category_Code__c</fullName>
    <label>Brand Category Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>