force-app/main/default/objects/Product2_PIM_Mapping__c/fields/Classcode_Prod_Offer_Code__c.field-meta.xml
<CustomField>
    <fullName>Classcode_Prod_Offer_Code__c</fullName>
    <label>Classcode/Prod_Offer_Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>