force-app/main/default/objects/Product2_PIM_Mapping__c/fields/Family_Code__c.field-meta.xml
<CustomField>
    <fullName>Family_Code__c</fullName>
    <label>Family Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>