force-app/main/default/objects/Product2_PIM_Mapping__c/fields/Family_Description__c.field-meta.xml
<CustomField>
    <fullName>Family_Description__c</fullName>
    <label>Family Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>