force-app/main/default/objects/Product2_PIM_Mapping__c/fields/Item_Class_code_description__c.field-meta.xml
<CustomField>
    <fullName>Item_Class_code_description__c</fullName>
    <label>Item Class code description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>