force-app/main/default/objects/Product2_PIM_Mapping__c/fields/ProdType__c.field-meta.xml
<CustomField>
    <fullName>ProdType__c</fullName>
    <label>ProdType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dell Base</fullName>
            </value>
            <value>
                <fullName>Dell Snp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>