force-app/main/default/objects/Product2_PIM_Mapping__c/fields/Product_Offering_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Offering_Description__c</fullName>
    <label>Product Offering Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>