force-app/main/default/objects/Product2_PIM_Mapping__c/fields/SFDC_Prod_ID__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Prod_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product2 PIM Mappings</relationshipLabel>
    <relationshipName>Product2_PIM_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>